2025-08-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix potential segfault when using --dry-init

2025-07-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix race condition when adding new nodes during file system scan

2025-06-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add info about worker states to progress bar

2025-05-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Extend expiration dates of GPG key in SECURITY.md

2025-04-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Define MAGIC constants added since Linux 4.9 (closes: #192)

2025-04-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix build with additional libraries on non-Linux systems
	* Update NEWS file and aide.conf.5 man page
	* Move log message to limit log level
	* Release aide 0.19

2025-03-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add log level 'limit'
	* Fix performance calculation when using --limit

2025-03-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix display of some URLs (closes: #183)

2025-03-25 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle SIGUSR1 only after config parsing (closes: #181)
	* Require nettle >= 3.7 and libselinux >= 3.4

2025-03-23 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix parsing of invalid time values
	* Fix locking of wrong node
	* Fix writing of negative time values
	* Fix listing of attributes
	* Improve logging
	* Fix missing parent directory in path check output

2025-03-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove no longer needed caching code
	* Fix deadlock when using some special attributes

2025-03-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Open files for reading only after rule tree matching
	* Fix compilation when O_PATH is not defined

2025-03-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'version_ge' boolean operator (closes: #83)

2025-03-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use O_NONBLOCK when opening files
	* Add AIDE_VERSION macro variable
